Better addthis icons

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,16 +4,19 @@
 {% block content %}
     <h2>{{problem.title}}</h2>
     <div id="content">{{problem.text|safe}}</div>
+    
     <!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style">
-<a class="addthis_button_tweet"></a>
-<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
-<a class="addthis_counter addthis_pill_style"></a>
-</div>
-<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f6e35d33df7f53a"></script>
-<!-- AddThis Button END -->
+    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+    <a class="addthis_button_facebook"></a>
+    <a class="addthis_button_twitter"></a>
+    <a class="addthis_button_google_plusone_share"></a>
+    <a class="addthis_button_reddit"></a>
+    <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
+    </div>
+    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f6e35d33df7f53a"></script>
+    <!-- AddThis Button END -->
+    
     {% if comment_tree|length > 0 %}
     <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#comments">
       Show/Hide Comments
