--- a/core/templates/core/email/base.html
+++ b/core/templates/core/email/base.html
@@ -215,7 +215,7 @@ ul li, ol li {
                     <table>
                         <tr>
                             <td align="center">
-                                <p>Don't like these annoying emails? <a href="http://localhost:8000/update_subscription/?md_email=*|EMAIL|*">Change to the weekly edition or unsubscribe completely</a>.
+                                <p>Don't like these annoying emails? <a href="http://www.problemotd.com/update_subscription/?md_email=*|EMAIL|*">Change to the weekly edition or unsubscribe completely</a>.
                                 </p>
                             </td>
                         </tr>
