--- a/core/templates/core/email/problems.html
+++ b/core/templates/core/email/problems.html
@@ -6,4 +6,9 @@
         <h2>{{problem.title}}</h2>
         {{problem.text|safe}}
     {% endfor %}
+	<!-- AddThis Button BEGIN -->
+	<p><a href="http://api.addthis.com/oexchange/0.8/forward/facebook/offer?pco=tbx32nj-1.0&amp;url=http%3A%2F%2Fwww.problemotd.com&amp;pubid=ra-4f6e35d33df7f53a" target="_blank" ><img src="http://cache.addthiscdn.com/icons/v1/thumbs/32x32/facebook.png" border="0" alt="Facebook" /></a>
+	<a href="http://api.addthis.com/oexchange/0.8/forward/twitter/offer?pco=tbx32nj-1.0&amp;url=http%3A%2F%2Fwww.problemotd.com&amp;pubid=ra-4f6e35d33df7f53a" target="_blank" ><img src="http://cache.addthiscdn.com/icons/v1/thumbs/32x32/twitter.png" border="0" alt="Twitter" /></a>
+	<a href="http://www.addthis.com/bookmark.php?source=tbx32nj-1.0&amp;=300&amp;pubid=ra-4f6e35d33df7f53a&amp;url=http%3A%2F%2Fwww.problemotd.com " target="_blank"  ><img src="http://cache.addthiscdn.com/icons/v1/thumbs/32x32/more.png" border="0" alt="More..." /></a></p>
+	<!-- AddThis Button END -->
 {% endblock %}
