--- a/core/static/core/css/screen.css
+++ b/core/static/core/css/screen.css
@@ -93,6 +93,11 @@ form {
   margin-bottom: 10px;
 }
 
+.masthead span {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 20px;
+}
+
 .masthead-nav > li {
   display: inline-block;
 }
