Changed to twitter curation

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -69,7 +69,7 @@
 
           <div class="mastfoot text-center">
             <div class="inner">
-              <p>Content curated by <a href="http://maxburstein.com">Max Burstein</a></p>
+              <p>Content curated by <a href="https://twitter.com/maxburstein">@MaxBurstein</a></p>
             </div>
           </div>
 
