--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,6 +16,10 @@
     <!-- Custom styles for this template -->
     <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'core/css/screen.css' %}" />
+    
+    <!-- RSS Feeds -->
+    <link rel="alternate" type="application/rss+xml" href="/rss/" />
+    <link rel="alternate" type="application/atom+xml" href="/atom/" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
