--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,8 +14,9 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet'>
-    <link rel="stylesheet" href="{% static 'core/css/screen.css' %}" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Press+Start+2P">
+    <link rel="stylesheet" href="{% static 'core/css/screen.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/xcode.css' %}">
     
     <!-- RSS Feeds -->
     <link rel="alternate" type="application/rss+xml" href="/rss/" />
@@ -89,5 +90,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="{% static 'core/js/global.js' %}"></script>
+    <script src="{% static 'core/js/highlight.pack.js' %}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </body>
 </html>
