--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -53,13 +53,13 @@
       <ul id="commenters">
           {% for comment in comment_tree %}
               {% if comment.user %}
-                  <li id="{{comment.id}}" class="comment" style="margin-left:{{comment.indent}}em;"><p class="poster"><span class="user">{% if comment.user.get_full_name %}{{comment.user.get_full_name}}{% else %}{{comment.user.username}}{% endif %}</span> - {{comment.date|naturaltime}}</p><p>{{comment.text|safe}}</p><p><a href="" class="reply">reply</a></p></li>
+                  <li id="{{comment.id}}" class="comment" style="margin-left:{{comment.indent}}em;"><p class="poster"><span class="user">{% if comment.user.get_full_name %}{{comment.user.get_full_name}}{% else %}{{comment.user.username}}{% endif %}</span> - {{comment.date|naturaltime}}</p>{{comment.text|safe}}<p><a href="" class="reply">reply</a></p></li>
               {% elif comment.name %}
-                  <li id="{{comment.id}}" class="comment" style="margin-left:{{comment.indent}}em;"><p class="poster">{% if comment.website %}<a href="{{comment.website}}">{{comment.name}}</a>{% else %}{{comment.name}}{% endif %} - {{comment.date|naturaltime}}</p><p>{{comment.text|safe}}</p><p><a href="" class="reply">reply</a></p></li>
+                  <li id="{{comment.id}}" class="comment" style="margin-left:{{comment.indent}}em;"><p class="poster">{% if comment.website %}<a href="{{comment.website}}">{{comment.name}}</a>{% else %}{{comment.name}}{% endif %} - {{comment.date|naturaltime}}</p>{{comment.text|safe}}<p><a href="" class="reply">reply</a></p></li>
               {% elif comment.deleted %}
                   <li id="{{comment.id}}" class="comment" style="margin-left:{{comment.indent}}em;">[Deleted] - {{comment.date|naturaltime}}<p>This comment was removed</p></li>
               {% else %}
-                  <li id="{{comment.id}}" class="comment" style="margin-left:{{comment.indent}}em;"><p class="poster">Anonymous - {{comment.date|naturaltime}}</p><p>{{comment.text|safe}}</p><p><a href="" class="reply">reply</a></p></li>
+                  <li id="{{comment.id}}" class="comment" style="margin-left:{{comment.indent}}em;"><p class="poster">Anonymous - {{comment.date|naturaltime}}</p>{{comment.text|safe}}<p><a href="" class="reply">reply</a></p></li>
               {% endif %}
           {% empty %}
               <li>There are currently no comments. You can be first!</li>
