Added view on site link to e-mail

--- a/core/templates/core/email/problems.html
+++ b/core/templates/core/email/problems.html
@@ -5,6 +5,7 @@
 	{% for problem in problems %}
         <h2>{{problem.title}}</h2>
         {{problem.text|safe}}
+		<p><a href="http://www.problemotd.com{{problem.get_absolute_url}}">View on site</a></p>
     {% endfor %}
 	<!-- AddThis Button BEGIN -->
 	<p><a href="http://api.addthis.com/oexchange/0.8/forward/facebook/offer?pco=tbx32nj-1.0&amp;url=http%3A%2F%2Fwww.problemotd.com&amp;pubid=ra-4f6e35d33df7f53a" target="_blank" ><img src="http://cache.addthiscdn.com/icons/v1/thumbs/32x32/facebook.png" border="0" alt="Facebook" /></a>
