Removed bootstrap.js

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -21,7 +21,7 @@
     {% endif %}
     
     {% if comment_tree|length > 0 %}
-    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#comments">
+    <button id="shcomments" type="button" class="btn btn-primary">
       Show/Hide Comments
     </button>
     <div id="comments" class="collapse">
