--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A new programming or logic puzzle every Mon-Fri">
 
     <title>{% block title %}{% endblock %}</title>
 
@@ -88,7 +87,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="{% static 'core/js/global.js' %}"></script>
     <script src="{% static 'core/js/highlight.pack.js' %}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
