--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -88,6 +88,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="{% static 'core/js/global.js' %}"></script>
+    <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f6e35d33df7f53a"></script>
     <script src="{% static 'core/js/highlight.pack.js' %}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </body>
