Github flavored markdown

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -35,7 +35,7 @@
                   <li><label for="id_website">{{form.website.label}}:</label> {{form.website}} <span class="about">(optional)</span></li>
               {% endif %}
               <li>{{form.text}}</li>
-              <li><small><em><a href="https://daringfireball.net/projects/markdown/basics">(Supports Markdown Syntax)</a> indent all code with 4 spaces or 1 tab</em></small></li>
+              <li><small><em><a href="https://help.github.com/articles/github-flavored-markdown" target="_blank">(Supports Github Flavored Markdown)</a></em></small></li>
               {% if html_captcha %}
                   <script type="text/javascript">
                   var RecaptchaOptions = {
