--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load compress %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,8 +15,10 @@
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Press+Start+2P">
+    {% compress css %}
     <link rel="stylesheet" href="{% static 'core/css/screen.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/xcode.css' %}">
+    {% endcompress %}
     
     <!-- RSS Feeds -->
     <link rel="alternate" type="application/rss+xml" href="/rss/" />
@@ -82,14 +85,12 @@
       </div>
 
     </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    {% compress js %}
     <script src="{% static 'core/js/global.js' %}"></script>
-    <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f6e35d33df7f53a"></script>
     <script src="{% static 'core/js/highlight.pack.js' %}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    {% endcompress %}
+    <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f6e35d33df7f53a"></script>
   </body>
 </html>
