Added bootstrap lead styles to uls in content section

--- a/core/static/core/css/screen.css
+++ b/core/static/core/css/screen.css
@@ -157,7 +157,7 @@ form {
 }
 
 /* Bootstap .lead style */
-#content p {
+#content p, #content ul {
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 200;
@@ -165,7 +165,7 @@ form {
 }
 
 @media (min-width: 1050px) {
-  #content p {
+  #content p, #content ul {
     font-size: 18px;
   }
 }
