--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -34,7 +34,7 @@
                   <li><label for="id_name">{{form.name.label}}:</label> {{form.name}} <span class="about">(optional)</span></li>
                   <li><label for="id_website">{{form.website.label}}:</label> {{form.website}} <span class="about">(optional)</span></li>
               {% endif %}
-              <li>{{form.text}}</li>
+              <li>{{form.text}}<div id="preview" class="comment"></div></li>
               <li><small><em><a href="https://help.github.com/articles/github-flavored-markdown" target="_blank">(Supports Github Flavored Markdown)</a></em></small></li>
               {% if html_captcha %}
                   <script type="text/javascript">
@@ -44,7 +44,7 @@
                   </script>
                 <li>{{html_captcha|safe}}</li>
               {% endif %}
-              <li><input class="btn btn-default" type="submit" value="Submit Comment" /></li>
+              <li><input class="btn btn-info preview" type="button" value="Preview Comment" /> <input class="btn btn-default" type="submit" value="Submit Comment" /></li>
               <li>{{form.ancestor}}</li>
           </ul>
           {% csrf_token %}
