--- a/core/static/core/css/screen.css
+++ b/core/static/core/css/screen.css
@@ -111,7 +111,7 @@ form {
 .masthead-nav > li:last-child {
   margin-right: 0;
 }
-.masthead-nav li a {
+.masthead-nav li a, .masthead-nav li span {
   padding-right: 0;
   padding-left: 0;
   font-size: 16px;
