Open source requirements plus better spam prevention

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -41,6 +41,7 @@
                   </script>
                 <li>{{html_captcha|safe}}</li>
               {% endif %}
+              {{form.password}}
               <li><input class="btn btn-info preview" type="button" value="Preview Comment" /> <input class="btn btn-default" type="submit" value="Submit Comment" /></li>
               <li>{{form.ancestor}}</li>
           </ul>
