--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% block title %}Problem of the Day -- Login{% endblock %}
 {% block content %}
-    <p><a class="btn btn-default btn-large" href='{% url "socialauth_begin" "github" %}?next={{next}}'><i class="fa fa-github"></i> Login using Github</a></p>
+    <p><a class="btn btn-default btn-large" href='{% url "social:begin" "github" %}?next={{next}}'><i class="fa fa-github"></i> Login using Github</a></p>
     <p>Authenticating through Github does not automatically subscribe you to the e-mail list. More authentication methods coming soon!</p>
 {% endblock %}
